# wlbreaktime

./: .gitignore  Cargo.toml  README.md
resources/: wlbreaktime.service  wlbreaktime.socket
src/: config.rs  main.rs  wayland.rs
